2005-09-30  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/conffile.c, server-src/diskfile.c, server-src/infofile.c,
	  client-src/getfsent.c, common-src/statfs.c, common-src/token.c
          (main): Remove fd declaration.

2005-09-30  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* client-src/runtar.c: 'e' and 'bdf' are only needed if GNUTAR.

2005-09-30  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* common-src/sl.c (insert_sort_sl). Typo.

2005-09-30  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* config/config.guess: Update from automake 1.9.5.
	* config/config.sub: Update from automake 1.9.5.
	* config/depcomp: Update from automake 1.9.5.
	* config/install-sh: Update from automake 1.9.5.
	* config/missing: Update from automake 1.9.5.
	* config/mkinstalldirs: Update from automake 1.9.5.
	* config/ltmain.sh: Update from libtool-1.5.16.
	* config/libtool.m4i: Update from libtool-1.5.16.

2005-09-30  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* common-src/bsd-security.c: Fix small bug.

2005-09-22  John R. Jackson <jrj@purdue.edu>

	* configure.in: If --without-server is specified, either on the
	  command line or via config.site, make sure --without-restore
	  is also in effect.  Avoids compilation errors if mismatched.
	* example/config.site: Document above.

2005-09-21  John R. Jackson <jrj@purdue.edu>

	* server-src/getconf.c: Allow CLIENT_LOGIN to be retrieved via
	  "amgetconf build.CLIENT_LOGIN".

2005-09-21  John R. Jackson <jrj@purdue.edu>

	* server-src/amlabel.c: 'int fd' is only needed if HAVE_LINUX_ZFTAPE_H
	  is defined.

2005-09-21  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amlabel.c: 'int fd' is needed.

2005-09-20  John R. Jackson <jrj@purdue.edu>

	* server-src/reporter.c: Fix minor typo noticed by Scott R. Burns
	  <Scott.Burns@Netcontech.Com>.

2005-09-20  John R. Jackson <jrj@purdue.edu>

	* common-src/file.c: Create safe_fd() to do common file descriptor