@@ -23,7 +23,7 @@
  * Authors: the Amanda Development Team.  Its members are listed in a
  * file named AUTHORS, in the root directory of this distribution.
  */
-/* $Id: chunker.c,v 1.21 2005/09/20 21:32:26 jrjackson Exp $
+/* $Id: chunker.c,v 1.22 2005/10/01 23:44:38 martinea Exp $
  *
  * requests remote amandad processes to dump filesystems
  */
@@ -107,7 +107,7 @@ main(main_argc, main_argv)
     static struct databuf db;
     struct cmdargs cmdargs;
     cmd_t cmd;
-    int infd, outfd;
+    int infd;
     unsigned long malloc_hist_1, malloc_size_1;
     unsigned long malloc_hist_2, malloc_size_2;
     char *conffile;
@@ -336,9 +336,6 @@ main(main_argc, main_argv)
 	    amfree(q);
 	    break;
 	}
-
-	if (outfd != -1)
-	    aclose(outfd);
 
 /*    } while(cmd != QUIT); */
 
