@@ -1,3 +1,7 @@
+2005-10-01  Jean-Louis Martineau <martineau@iro.umontreal.ca>
+
+	* server-src/chunker.c (main): Remove outfd.
+
 2005-09-30  Jean-Louis Martineau <martineau@iro.umontreal.ca>
 
 	* server-src/conffile.c, server-src/diskfile.c, server-src/infofile.c,
